--- a/hahn-banach.tex
+++ b/hahn-banach.tex
@@ -219,6 +219,7 @@ Agora o teorema que será usada na prova do teorema da Aproximação Universal.
 
 \begin{teo}
     Um subespaço \( M \) de um espaço vetorial \( V \) é denso se, e somente se, o único elemento de \( V^{ * } \) que se anula em \( M \) é o funcional nulo.
+    \label{thm: hahn_banach_corolary}
 \end{teo}
 \begin{proof}
     Suponha que \( N \) é um subespaço denso de \( V \) e seja \( f \in V^{ * } \) um funcional que se anula em \( M \).
