--- a/main.tex
+++ b/main.tex
@@ -31,18 +31,20 @@
 \newpage
 
 \input{introducao}
-%% \input{weierstrass}
-%% \input{hilbert}
-%% \input{hahn-banach}
-%% \input{riesz}
-%% \input{aproximacao-universal}
+\input{weierstrass}
+\input{hilbert}
+\input{hahn-banach}
+\input{riesz}
+\input{aproximacao-universal}
+
+\newpage
 
 \printbibliography
 
 \newpage
 
 \appendix
-%% \input{espacos-metricos}
-%% \input{analise-funcional}
+\input{espacos-metricos}
+\input{analise-funcional}
 
 \end{document}
