--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,8 @@
 \newtheorem{cor}[teo]{Corolário}
 \newtheorem*{axiom}{Axioma}
 
+\newtheorem*{TAU}{Teorema da aproximação universal}
+
 \theoremstyle{definition}
 \newtheorem{defn}{Definição}[section]
 \newtheorem{conj}{Conjectura}[section]
@@ -19,9 +21,14 @@
 % Macros
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
+\renewcommand{\Re}{\text{Re}}
+
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\I}{\mathbb{I}}
+\newcommand{\uat}{\textbf{TAU}}
+
 \DeclarePairedDelimiter{\dotprod}{\langle}{\rangle}
+
 \DeclareMathOperator{\rk}{rk}
 \DeclareMathOperator{\intt}{int}
 \DeclareMathOperator{\diam}{diam}
@@ -29,4 +36,3 @@
 \DeclareMathOperator{\vspan}{span}
 \DeclareMathOperator{\proj}{proj}
 \DeclareMathOperator{\lin}{Lin}
-\renewcommand{\Re}{\text{Re}}
