--- a/riesz.tex
+++ b/riesz.tex
@@ -3,7 +3,7 @@
 Esse teorema possui diversas formulações.
 Em geral, elas têm como objetivo representar os funcionais lineares contínuos em um dado espaço vetorial de uma maneira mais natural, associando-os a elementos daquele mesmo espaço ou de outro.
 
-Apesar de a versão que abordaremos inicialmente não ser a utilizada na demonstração do teorema da aproximação universal, acreditamos que é importante apresentar esse teorema primeiro no contexto mais geral de espaços de Hilbert.
+Apesar de a versão que abordaremos inicialmente não ser a utilizada na demonstração do teorema da aproximação universal, acreditamos que é importante apresentar esse teorema primeiro no contexto natural de espaços de Hilbert.
 
 Novamente, nossa exposição desse resultado clássico da análise funcional foi formulada com base em \cite{func-anal} e o leitor que quiser recordar conceitos fundamentais poderá encontrálos no apêndice \ref{app: func anal}.
 
