--- a/weierstrass.tex
+++ b/weierstrass.tex
@@ -2,14 +2,7 @@
 
 \section{Teorema da aproximação de Weierstrass}
 
-O primeiro teorema relacionado a aproximações de funções que estudaremos é o teorema da aproximação de Weierstrass, segundo o qual toda função contínua em um intervalo fechado pode ser bem proximada por um polinômio.
-Inicialmente provado por Weierstrass em 1885, novas demonstrações surgiram com o tempo.
-A que usamos de referência pode ser encontrada em \cite{weierstrass}.
-
-Escolhemos começar com esse resultado por sua demonstração ser elementar, não exigindo mais que um curso de análise na reta.
-Além disso, ele trata de aproximações em um contexto mais simples, envolvendo apenas uma variável, o que serve para acostumar o leitor ao tipo de questão que nos é de interesse.
-
-Como dito anteriormente, desejamos mostrar que dada uma função contínua \( f : [a, b] \to \R \), podemos aproximá-la arbitrariamente bem por funções polinomiais \( p : [a, b] \to \R \).
+Como dito na introdução, desejamos mostrar que dada uma função contínua \( f : [a, b] \to \R \), podemos aproximá-la arbitrariamente bem por funções polinomiais \( p : [a, b] \to \R \).
 
 Em outras palavras, seja \( C( [a, b]) \) o espaço vetorial das funções contínuas em \( [a, b] \). Indicamos por \( \norm{ \varphi }_{ \infty } \) a norma do supremo de uma função limitada \( \varphi : [a, b] \to \R \), ou seja, \[
     \norm{ \varphi }_{ \infty } = \sup \left\{ \abs{ \varphi(x) } \tq x \in [a, b] \right\}
