Adds proof of simpler version of Riesz in measure theory and states the general case

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -50,3 +50,17 @@ publisher   = {Queen's University at Kingston}
   pages={4-22},
   doi={10.1109/MASSP.1987.1165576}
 }
+@book{bartle,
+  author         = {Robert G. Bartle},
+  editor         = {John Wiley \& Sons, inc.},
+  title          = {The Elements of Integration and Lebesgue Measure},
+  publisher      = {Wiley-Interscience},
+  year           = {1995}
+}
+@book{royden,
+  author         = {H. L. Royden},
+  editor         = {Collier Macmillian Canada, Inc.},
+  title          = {Real Analysis},
+  publisher      = {Macmillian Publishing Company},
+  year           = {1988}
+}
