--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,7 @@
 \newtheorem*{axiom}{Axioma}
 
 \newtheorem*{TAU}{Teorema da aproximação universal}
+\newtheorem*{Riesz}{Teorema da representação de Riesz}
 
 \theoremstyle{definition}
 \newtheorem{defn}{Definição}[section]
