--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -64,3 +64,10 @@ publisher   = {Queen's University at Kingston}
   publisher      = {Macmillian Publishing Company},
   year           = {1988}
 }
+@misc{fourier,
+  author       = {Gordan Zitkovic},
+  title        = {Characteristic Functions},
+  publisher = {University of Texas},
+  year         = {2013},
+  url          = {https://web.ma.utexas.edu/users/gordanz/notes/characteristic.pdf}
+}
