--- a/hilbert.tex
+++ b/hilbert.tex
@@ -18,15 +18,7 @@ O leitor interassado poderá encontrar mais informações em \cite{hilbert}.
     Denotamos o espaço das funções contínuas de \( \I^{ n } \) em \( \R \) por \( C(\I^{ n }) \).
     Notamos que esse espaço, com a norma do supremo, se torna um espaço métrico completo, com a distância dada por
     \begin{equation}
-        d \left( 
-            ( f_{ 1 }, \dots, f_{ n } ),
-            ( g_{ 1 }, \dots, g_{ n } )
-        \right)
-        = \max \left\{ 
-            \norm{ f_{ 1 } - g_{ 1 } }_{ \infty },
-            \dots,
-            \norm{ f_{ n } - g_{ n } }_{ \infty }
-        \right\}
+        d(f, g) = \norm{ f - g }_{ \infty }
     .\end{equation}
     O leitor pode encontrar resultados e definições elementares relativas a espaços métricos (inclusive o teorema da categoria de Baire, que será usado a seguir) no apêndice \ref{ap: espacos_metricos}.
 \end{rem}
