--- a/main.tex
+++ b/main.tex
@@ -30,12 +30,12 @@
 
 \newpage
 
-%% \input{introducao}
-%% \input{weierstrass}
-%% \input{hilbert}
-%% \input{hahn-banach}
+\input{introducao}
+\input{weierstrass}
+\input{hilbert}
+\input{hahn-banach}
 \input{riesz}
-%% \input{aproximacao-universal}
+\input{aproximacao-universal}
 
 \newpage
 
