--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -54,7 +54,7 @@ Logo, ela pode ser considerada uma função de \( \R^{ n } \) em \( \R^{ m } \).
 
 \begin{figure}[h]
     \begin{center}
-        \input{figuras/neural-net.tex}
+        \input{../figuras/neural-net.tex}
     \end{center}
     \caption{Rede neural com apenas uma camada intermediária.
     Aqui temos \( x =
