--- a/tex/main.tex
+++ b/tex/main.tex
@@ -12,9 +12,10 @@
 ]{biblatex}
 \usepackage{csquotes}
 \usepackage{hyperref}
-\addbibresource{bibliografia.bib}
 
-\input{preamble.tex}
+\addbibresource{../bib/bibliografia.bib}
+
+\input{preamble}
 
 \title{Teorema da Aproximação Universal}
 \author{Caio Lins}
